Release 0.4.1